# FileStreamerBot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.json  heroku.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  renovate.json
.github/workflows/: cf-workers-push.yml  ci.yml  dependabot-auto-merge.yml  export-reqs-txt.yml  heroku-push.yml  pre-commit-autoupdate.yml  release.yml
WebStreamer/: __init__.py  __main__.py  logger.py  vars.py
WebStreamer/bot/: __init__.py  client.py
WebStreamer/bot/plugins/: admin.py  ban.py  broadcast.py  settings.py  start.py  stream.py
WebStreamer/db/: __init__.py  downloads.py  mongo.py  users.py
WebStreamer/html/: index.html
WebStreamer/html/assets/img/: README.md
WebStreamer/html/assets/static/: README.md
WebStreamer/html/templates/: download_page.html  index.html
WebStreamer/server/: __init__.py  exceptions.py  stream_routes.py
WebStreamer/utils/: broadcast_helper.py  custom_dl.py  custom_filters.py  database.py  file_properties.py  helpers.py  human_readable.py  ikb.py  joinCheck.py  keep_alive.py  keepalive.py  shortlink.py  time_format.py
cf-worker/: .eslintrc.js  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
cf-worker/src/: index.ts
