[tool.poetry]
name = "filestreamerbot"
version = "1.0.0"
description = ""
authors = ["Divanshu Chauhan <divkix@divkix.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Pyrogram = "^2.0.106"
aiohttp = "^3.8.4"
TgCrypto = "^1.2.5"
aiofiles = "^23.1.0"
dnspython = "^2.3.0"
requests = "^2.31.0"
motor = "^3.1.2"
pyshorteners = "^1.0.1"
cachetools = "^5.3.0"
prettyconf = "^2.2.1"
aiohttp-jinja2 = "^1.5"
pypers = "^1.3.4"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
pre-commit = "^3.3.2"
isort = "^5.12.0"
pylint = "^2.17.4"
pyclean = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
