[tool.poetry]
name = "filestreamerbot"
version = "1.0.0"
description = ""
authors = ["Divanshu Chauhan <divkix@divkix.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Pyrogram = "^2.0.106"
aiohttp = "^3.9.3"
TgCrypto = "^1.2.5"
aiofiles = "^23.2.1"
dnspython = "^2.5.0"
requests = "^2.31.0"
motor = "^3.3.2"
pyshorteners = "^1.0.1"
cachetools = "^5.3.2"
prettyconf = "^2.2.1"
pypers = "^1.3.4"

[tool.poetry.dev-dependencies]
black = "^23.12.1"
pre-commit = "^3.7.1"
isort = "^5.13.2"
pylint = "^3.1.0"
pyclean = "^2.7.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
